--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -197,7 +197,7 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QComboBox" name="comboBox_3">
+       <widget class="QComboBox" name="comboBoxLicenseType">
         <item>
          <property name="text">
           <string>Lisans ve Ön Lisans</string>
@@ -240,7 +240,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QComboBox" name="comboBox_4">
+       <widget class="QComboBox" name="comboBoxUlke">
         <item>
          <property name="text">
           <string>Tüm Ülkeler</string>
@@ -258,7 +258,7 @@
         </item>
         <item>
          <property name="text">
-          <string>Diğer</string>
+          <string>Yurtdışı</string>
          </property>
         </item>
        </widget>
@@ -280,9 +280,6 @@
     </item>
     <item row="2" column="0" colspan="4">
      <widget class="QTableWidget" name="tableWidgetPrograms">
-      <property name="sortingEnabled">
-       <bool>true</bool>
-      </property>
       <column>
        <property name="text">
         <string>Program Kodu</string>
