--- a/AboutDialog.ui
+++ b/AboutDialog.ui
@@ -6,31 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>603</width>
-    <height>480</height>
+    <width>600</width>
+    <height>349</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>AcademyScope Hakkında</string>
   </property>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>23</x>
-     <y>147</y>
-     <width>111</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>16</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Sponsorlar</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
@@ -53,8 +35,8 @@
    <property name="geometry">
     <rect>
      <x>23</x>
-     <y>314</y>
-     <width>181</width>
+     <y>184</y>
+     <width>221</width>
      <height>21</height>
     </rect>
    </property>
@@ -64,16 +46,16 @@
     </font>
    </property>
    <property name="text">
-    <string>İşbirlikleri ve Teşekkürler</string>
+    <string>İlham Kaynağı ve Teşekkürler</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>340</y>
+     <y>210</y>
      <width>151</width>
-     <height>121</height>
+     <height>91</height>
     </rect>
    </property>
    <property name="text">
@@ -84,7 +66,7 @@
    <property name="geometry">
     <rect>
      <x>23</x>
-     <y>90</y>
+     <y>100</y>
      <width>101</width>
      <height>16</height>
     </rect>
@@ -113,27 +95,14 @@
     </font>
    </property>
    <property name="text">
-    <string>Version 1.0 Beta 1</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_2">
-   <property name="geometry">
-    <rect>
-     <x>23</x>
-     <y>170</y>
-     <width>151</width>
-     <height>121</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
+    <string>Sürüm 1.0 Beta 1</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
      <x>23</x>
-     <y>120</y>
+     <y>130</y>
      <width>221</width>
      <height>16</height>
     </rect>
@@ -144,14 +113,17 @@
     </font>
    </property>
    <property name="text">
-    <string>contactme@volkanorhan.com</string>
+    <string>&lt;a href='mailto:contactme@volkanorhan.com'&gt;contactme@volkanorhan.com&lt;/a&gt;</string>
+   </property>
+   <property name="openExternalLinks">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>431</y>
+     <x>490</x>
+     <y>290</y>
      <width>71</width>
      <height>31</height>
     </rect>
@@ -161,6 +133,46 @@
    </property>
    <property name="standardButtons">
     <set>QDialogButtonBox::StandardButton::Ok</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>210</y>
+     <width>381</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Bu proje fikrinin doğmasında ve gelişmesinde ilham kaynağı olan &lt;a href=&quot;https://sinavcraft.blogspot.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#1f9b5d;&quot;&gt;SınavCraft&lt;/span&gt;&lt;/a&gt; kanalına teşekkürlerimi sunarım.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="textFormat">
+    <enum>Qt::TextFormat::RichText</enum>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+   <property name="openExternalLinks">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>60</y>
+     <width>151</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Logo</string>
    </property>
   </widget>
  </widget>
