--- a/AboutDialog.ui
+++ b/AboutDialog.ui
@@ -46,7 +46,7 @@
     </font>
    </property>
    <property name="text">
-    <string>İlham Kaynağı ve Teşekkürler</string>
+    <string>İşbirlikleri ve Teşekkürler:</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
@@ -57,6 +57,9 @@
      <width>151</width>
      <height>91</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">image: url(:/Resources/Images/SinavCraft.jpg);</string>
    </property>
    <property name="text">
     <string/>
@@ -140,8 +143,8 @@
     <rect>
      <x>190</x>
      <y>210</y>
-     <width>381</width>
-     <height>41</height>
+     <width>341</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
@@ -150,7 +153,7 @@
     </font>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Bu proje fikrinin doğmasında ve gelişmesinde ilham kaynağı olan &lt;a href=&quot;https://sinavcraft.blogspot.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#1f9b5d;&quot;&gt;SınavCraft&lt;/span&gt;&lt;/a&gt; kanalına teşekkürlerimi sunarım.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Bu proje fikrimin doğmasında ve gelişmesinde ilham kaynağı olan ve projeyi fikirleriyle destekleyen &lt;a href=&quot;https://sinavcraft.blogspot.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#1f9b5d;&quot;&gt;SınavCraft&lt;/span&gt;&lt;/a&gt; kanalına teşekkürlerimi sunarım.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="textFormat">
     <enum>Qt::TextFormat::RichText</enum>
@@ -165,14 +168,17 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>400</x>
+     <x>430</x>
      <y>60</y>
-     <width>151</width>
-     <height>121</height>
+     <width>171</width>
+     <height>131</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">image: url(:/Resources/Images/AcademyScope.png);</string>
+   </property>
    <property name="text">
-    <string>Logo</string>
+    <string/>
    </property>
   </widget>
  </widget>
