--- a/AboutDialog.ui
+++ b/AboutDialog.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>AcademyScope Hakkında</string>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="labelTitle">
    <property name="geometry">
     <rect>
      <x>23</x>
@@ -31,7 +31,7 @@
     <string>AcademyScope YKS Tercih Robotu</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_5">
+  <widget class="QLabel" name="labelThanks">
    <property name="geometry">
     <rect>
      <x>23</x>
@@ -65,13 +65,13 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLabel" name="labelName">
    <property name="geometry">
     <rect>
      <x>23</x>
      <y>100</y>
-     <width>101</width>
-     <height>16</height>
+     <width>171</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
@@ -83,13 +83,13 @@
     <string>Volkan Orhan</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="labelVersion">
    <property name="geometry">
     <rect>
      <x>23</x>
      <y>60</y>
-     <width>131</width>
-     <height>16</height>
+     <width>191</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
@@ -101,13 +101,13 @@
     <string>Sürüm 1.0 Beta 1</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_6">
+  <widget class="QLabel" name="labelMailAddress">
    <property name="geometry">
     <rect>
      <x>23</x>
-     <y>130</y>
-     <width>221</width>
-     <height>16</height>
+     <y>120</y>
+     <width>301</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -122,7 +122,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QDialogButtonBox" name="buttonBox">
+  <widget class="QDialogButtonBox" name="buttonSinavCraft">
    <property name="geometry">
     <rect>
      <x>490</x>
@@ -138,13 +138,13 @@
     <set>QDialogButtonBox::StandardButton::Ok</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_7">
+  <widget class="QLabel" name="labelSinavCraft">
    <property name="geometry">
     <rect>
      <x>190</x>
      <y>210</y>
-     <width>341</width>
-     <height>61</height>
+     <width>371</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="font">
@@ -153,7 +153,7 @@
     </font>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Bu proje fikrimin doğmasında ve gelişmesinde ilham kaynağı olan ve projeyi fikirleriyle destekleyen &lt;a href=&quot;https://sinavcraft.blogspot.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#1f9b5d;&quot;&gt;SınavCraft&lt;/span&gt;&lt;/a&gt; kanalına teşekkürlerimi sunarım.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Bu proje fikrimin doğmasında ve gelişmesinde ilham kaynağı olan ve projeyi fikirleriyle destekleyen &lt;a href=&quot;https://sinavcraft.blogspot.com&quot;&gt;&lt;span style=&quot; text-decoration: none; color:red;&quot;&gt;SınavCraft&lt;/span&gt;&lt;/a&gt; kanalına teşekkürlerimi sunarım.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="textFormat">
     <enum>Qt::TextFormat::RichText</enum>
@@ -165,7 +165,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QLabel" name="labelLogo">
    <property name="geometry">
     <rect>
      <x>430</x>
