--- a/Resources.qrc
+++ b/Resources.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>Resources/Images/AcademyScope.png</file>
         <file>Resources/Images/SinavCraft.jpg</file>
+        <file>Resources/Fonts/Inter.ttf</file>
     </qresource>
 </RCC>
