--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -1071,7 +1071,7 @@
        </spacer>
       </item>
       <item row="1" column="0">
-       <widget class="QLabel" name="label_11">
+       <widget class="QLabel" name="logo">
         <property name="minimumSize">
          <size>
           <width>110</width>
