--- a/AboutDialog.ui
+++ b/AboutDialog.ui
@@ -165,7 +165,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="labelLogo">
+  <widget class="QLabel" name="logo">
    <property name="geometry">
     <rect>
      <x>430</x>
